@@ -24,6 +24,8 @@ Version 1.4.2:
 	Fixed bug with % based widths and heights.
 	Fixed bug with editor height when created in a hidden div.
 		- Thanks to @berridgeab for reporting
+	Fixed bug with new lines and when two block level elements are next to each other.
+		- Thanks to @martec for reporting
 
 Version 1.4.1:
 	Dropped GPL to match jQuery license.
